--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -18,3 +18,7 @@ You can have many headings
 
 Aren't headings cool?
 ------
+
+<script>  
+    document.write("Welcome to Javatpoint");  
+</script>  
